feat: refatoração arquitetura limpa puppeteer
